CAY-2270 Update function support in expression parser
CAY-2271 ColumnSelect: support for prefetch and limit
CAY-2272 ColumnSelect: methods to manually control DISTINCT clause
CAY-2274 Modeler: Validate case when dependent PK is marked as “generated”
CAY-2277 Create ClientRuntime with ClientRuntimeBuilder just like ServerRuntime
CAY-2278 Extract cayenne-postcommit module from cayenne-lifecycle

Bug Fixes:

CAY-2021 cdbimport: detect when same FK constraint is defined twice
CAY-2077 Bug in CayenneRuntimeException using wrong specified string in Formatter
CAY-2094 SelectById query doesn't work from ROP client
CAY-2161 'Not for Client Use' option is ignored at Class Generation
CAY-2171 Modeler: Undo db Entity Sync throws error
CAY-2208 SQLTemplate: LEFT JOIN to a subset of a table returns nulls for entries that don't have a match in the subset
CAY-2230 Error using connection to postgresql with db schema in DB URL
CAY-2240 Modeler: issue with cursor rendering for EJBQL query
CAY-2243 ObjectContext.getGraphManager().unregisterObject() inconsistencies
CAY-2250 Remove: Incorrect text in Confirm Remove message when cursor is set on attribute row
CAY-2256 Cannot Save/Insert an Object With null Flattened (complex) toOne Relationship (see also CAY-2146)
CAY-2265 ServerRuntime.builder() fails to set default runtime name when a the project file doesn't follow recognized pattern
CAY-2273 Modeler: default suggested cgen location is rooted in subpackage
CAY-2275 Documentation: tutorial is out of sync with 4.0.M5 version
CAY-2276 PrePersist listener registered as PostPersist in LifecycleCallbackRegistry.addListener(Class<?>, LifecycleListener)
CAY-2279 cdbimport: skip PK comparison for VIEWs

----------------------------------
Release: 4.0.M5
Date: March 6, 2017
----------------------------------
Changes/New Features:

CAY-2139 Upgrade HSQLDB dependency to the most recent version (2.3.4)
CAY-2150 Refactoring: ParameterBinding to contain ExtendedType property